--- a/src/config.json
+++ b/src/config.json
@@ -17,7 +17,7 @@
 
   "//": "CLOCK_PERIOD - Increase this in case you are getting setup time violations.",
   "//": "The value is in nanoseconds, so 20ns == 50MHz.",
-  "CLOCK_PERIOD": 20,
+  "CLOCK_PERIOD": 39,
 
   "//": "Hold slack margin - Increase them in case you are getting hold violations.",
   "PL_RESIZER_HOLD_SLACK_MARGIN": 0.1,
@@ -102,8 +102,9 @@
 
   "//": "  Config",
   "FP_PDN_HORIZONTAL_LAYER": "met3",
-  "FP_MACRO_HORIZONTAL_HALO": "4",
+  "FP_MACRO_HORIZONTAL_HALO": "0",
   "FP_MACRO_VERTICAL_HALO": "0",
+  "FP_TAPCELL_DIST": 8,
   "FP_PDN_VOFFSET": "2",
   "FP_PDN_VSPACING": "1.5",
   "FP_PDN_VPITCH": "29"
