docs: update documentation
Remove the `solid_color` input, as it's no longer relevant for the 6bpp logo

--- a/info.yaml
+++ b/info.yaml
@@ -3,7 +3,7 @@ project:
   title:        "VGA Screensaver with embedded bitmap ROM"      # Project title
   author:       "Uri Shaked"      # Your name
   discord:      "urish"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  "Tiny Tapeout Logo bouncing around the screen (640x480, TinyVGA Pmod)"      # One line description of what your project does
+  description:  "64x64x6bpp Tiny Tapeout Logo bouncing around the screen (640x480, TinyVGA Pmod)"      # One line description of what your project does
   language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
   clock_hz:     25175000       # Clock frequency in Hz (or 0 if not applicable)
 
@@ -25,7 +25,7 @@ project:
 pinout:
   # Inputs
   ui[0]: "tile"
-  ui[1]: "solid_color"
+  ui[1]: ""
   ui[2]: ""
   ui[3]: ""
   ui[4]: "gamepad_latch"
