fix: custom pdn configuration to generate TT-compatible power pins

--- a/src/config.json
+++ b/src/config.json
@@ -78,8 +78,8 @@
     "rom_vga_logo": {
       "instances": {
         "bitmap_rom": {
-          "location": [0.0, 0.0],
-          "orientation": "FS"
+          "location": [16.0, 0.1],
+          "orientation": "S"
         }
       },
       "gds": ["dir::../macro/rom_vga_logo.gds.gz"],
@@ -97,15 +97,18 @@
   "//": "  Have magic consider nets of same name to be connected since our power pads are not all internally connected",
   "MAGIC_NO_EXT_UNIQUE": 1,
 
+  "//": "  Full custom PDN config",
+  "FP_PDN_CFG": "dir::pdn_cfg.tcl",
+
   "//": "  All met4 stripes are not connected internally, this causes PDN to crap out ...",
   "ERROR_ON_PDN_VIOLATIONS": 0,
 
   "//": "  Config",
   "FP_PDN_HORIZONTAL_LAYER": "met3",
-  "FP_MACRO_HORIZONTAL_HALO": "0",
+  "FP_MACRO_HORIZONTAL_HALO": "3",
   "FP_MACRO_VERTICAL_HALO": "0",
-  "FP_TAPCELL_DIST": 8,
+  "FP_ENDCAP_CELL": "sky130_fd_sc_hd__tapvpwrvgnd_1",
   "FP_PDN_VOFFSET": "2",
   "FP_PDN_VSPACING": "1.5",
-  "FP_PDN_VPITCH": "29"
+  "FP_PDN_VPITCH": "29.5"
 }
