--- a/info.yaml
+++ b/info.yaml
@@ -8,7 +8,7 @@ project:
   clock_hz:     25175000       # Clock frequency in Hz (or 0 if not applicable)
 
   # How many tiles your design occupies? A single tile is about 167x108 uM.
-  tiles: "2x2"          # Valid values: 1x1, 1x2, 2x2, 3x2, 4x2, 6x2 or 8x2
+  tiles: "1x2"          # Valid values: 1x1, 1x2, 2x2, 3x2, 4x2, 6x2 or 8x2
 
   # Your top module name must start with "tt_um_". Make it unique by including your github username:
   top_module:  "tt_um_rom_vga_screensaver"
@@ -20,6 +20,7 @@ project:
     - "tt_um_rom_vga_screensaver.v"
     - "gamepad_pmod.v"
     - "vga_sync_generator.v"
+    - "rom_vga_logo.v"
 
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 pinout:
